# aws-examples

./: .env.template  README.md  pyproject.toml
bedrock-examples/: README.md
bedrock-examples/text-to-sql-agent/: README.md  main.py
bedrock-examples/text-to-sql-agent/utils/: agent.py  clean.py  initialize_environment.py  lambda_function.py  text_to_sql_openai_schema.json
bedrock-examples/web-search-agent/: tools.py
resources/: meeting_transcript.md
resources/FinancialData/customer_data/: customers.csv
resources/FinancialData/employee_data/: employees.csv
resources/FinancialData/product_data/: products.csv
resources/FinancialData/sales_data/: sales.csv
resources/FinancialData/transaction_data/: transactions.csv
src/bedrock-examples/: README.md  transcript_analyzer.py
src/bedrock-examples/web-search-agent/: agent.py  main.py
src/strands-examples/: README.md
src/strands-examples/writer/: enterpricse_workflow_automation.py  financial_analysis.py  structured_output.py  vision_image_analysis.py
strands-examples/: README.md
strands-examples/bedrock/: agents_workflow.py  file_operations.py  knowledge_base_agent.py  mcp_calculator.py  memory_agent.py  meta_tooling.py  structured_output.py  weather_forecaster.py
strands-examples/bedrock/hybrid_multi_agent_example/: creative_assistant.py  fin_assistant.py  knowledge_agent.py  med_assistant.py
strands-examples/bedrock/multi_agent_example/: computer_science_assistant.py  english_assistant.py  language_assistant.py  no_expertise.py  (+2 more)
strands-examples/writer/: README.md  long_context.py  memory_agent.py
(+7 files in other folders)
